Overflow + fixed wall NOMSG warning

--- a/codegalaxy/theme/scss/general.scss
+++ b/codegalaxy/theme/scss/general.scss
@@ -133,3 +133,7 @@
 .round-image {
     border-radius: 50%;
 }
+
+.overflow{
+  word-wrap: break-word;
+}
